frontend/src/components/HomeDetailsComponent/BookingComponent/BookingComponent.css
.booking-component-container {
    display: grid;
    grid-template-columns: 50% 50%;
    margin-top: 2em;
    padding-bottom: 2em;
    /* border-bottom: 1px solid rgb(221, 221, 221) */
}

.booking-card-container {
    display: flex;
    align-items: center;
    /* justify-content: center; */
    height: 13em;
}

.booking-card {
    display: grid;
    grid-template-rows: 3em 3em 3em 1fr;
    background-color: #fff;
    border-radius: 1em;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
    width: 20em;
    height: 13em;
}

.title {
    display: flex;
    justify-content: space-between;
    padding: 1em 1em 1em 1em;
    border-bottom: 1px solid rgb(221, 221, 221)
}

.price {
    font-size: 18px;
    font-family: sans-serif;
    font-weight: 500
}

.night {
    font-size: 14px;
    font-weight: 400;
}

.avg-review {
    font-size: 12px;
    padding-left: .3em;
    font-family: sans-serif;
    font-weight: 600;
}

.all-reviews {
    color: gray;
    padding-left: .3em;
}

.booking-reviews {
    padding-top: .8em;
}

.datepicker-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.left-input {
    margin-right: -.85em;
}

.right-input {
    margin-left: -1em;
}

.left-input-radius {
    border-radius: 5px 0px 0px 5px
}

.right-input-radius {
    border-radius: 0px 5px 5px 0px;
}

.long-reserve-container {
    display: flex;
    justify-content: center;
}

.checkin-out-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin-top: 1em;
}

.long-reserve-button {
    border: 1px solid black;
    height: 3em;
    width: 90%;
    color: white;
    text-decoration: none;
    border-radius: .5em;
    font-size: 14px;
    background-image: linear-gradient(to right, rgb(121, 95, 168) 1%,
            rgb(71, 31, 144));
}

.checkin-out-words {
    font-size: 16px;
    font-family: sans-serif;
    /* display: flex;
    justify-content: center;
    padding-right: 1em */
}

.total-container {
    display: grid;
    grid-template-rows: 30% 50% 20%;
    border: 1px solid rgb(221, 221, 221);
    border-radius: 1em;
    background-color: white;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
    height: 25em;
    width: 80%;
    margin-left: 2em;
}

.total-card-top-container {
    display: grid;
    grid-template-columns: 30% 70%;
    height: 100%;
    border-bottom: 1px solid rgb(221, 221, 221)
}

.top-card-img-container {
    display: flex;
    padding-top: 1.5em;
    padding-left: 1.5em;

}

.small-image {
    padding-top: -1em;
    border-radius: .4em;
    width: 100%;
    height: 80%;
}

.top-card-wording-container {
    display: grid;
    grid-template-rows: 30% 45% 25%;
    padding-top: 1.5em;
    padding-left: 1em;
    padding-bottom: 1.2em;
    align-content: center;
}

.entire {
    color: gray;
    font-family: sans-serif;
    font-size: 12px;
}

.name {
    font-family: sans-serif;
    font-size: 14px;
    font-weight: 100;
}

.booking-star {
    padding-top: 1em;
}

.booking-star-words {
    padding-left: .5em;
    font-family: sans-serif;
    font-size: 12px;
}

.total-price-details-container {
    display: grid;
    grid-template-rows: 20% 20% 20% 20% 20%;
}

.price-details-word {
    padding-left: 1.5em;
    font-family: sans-serif;
    font-size: 18px;
    font-weight: 500;
}

.price-x-nights-container {
    display: flex;
    justify-content: space-between;
    margin-top: .9em;
}

.price-x-nights {
    padding-left: 2em;
    font-family: sans-serif;
    font-size: 14px;
    font-weight: 100;
}

.price-x-nights-total {
    padding-right: 2em;
    font-family: sans-serif;
    font-size: 14px;
    font-weight: 100;
}

.price-x-nights-container2 {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.total-amt-word {
    padding-left: 2em;
    font-family: sans-serif;
    font-size: 14px;
    font-weight: 600;
}

.total-amt {
    padding-right: 2em;
    font-family: sans-serif;
    font-size: 14px;
    font-weight: 600;
}

.long-reserve-container2 {
    display: flex;
    justify-content: center;
    padding-top: 1em;
}

